Version 1.5.1
* Post DiFX-2.3
* Improve behavior of fixmark5b() in the case that fill pattern is seen at the 1 second transition.
* m5bsum calculates frame rates now rather than just assuming 25600 frames per second

Version 1.5.0
* Add KVN5B format: like Mark5B but different data bit patterns (Richard Dodson)
* Add 3, 5, 6, and 7 channel VDIF decoders
* Add functionality to repair Mark5B data streams (regrid frames, remove stray bytes, fill missing frames with fill pattern)
* Add Mark5B file summary program, m5bsum, akin to vsum (in vdifio)
* Reorder format checks to look for Mark5B earlier than Mark4 or VLBA as that format is becoming much more common
* Utility m5fb (mark5 filterbank) to generate dynamic spectrum from baseband data
* Version for DiFX-2.3, Dec 20, 2013

Version 1.4.4
* Slightly faster and more relaxed frame finding for VLBA and Mark4 formats
* Numerous small improvements based on improved cppcheck exposed by Martin
Ettl
* Add genheaders() for Mark4 and Mark5B formats
* m5test: minor improvements
* c++11 compliance
* Much improved capabilities for reading from stdin
* m5bstate: recognize filled data and don't count
* Remove findvdif program.  new program vsum in the vdifio package is much
better.
* m5timeseries utility added
* 32 channel 2 bit VDIF support (Nicolas Pradel)
* Version for DiFX-2.2, May 31, 2013

Version 1.4.3
* Post 2.0.1 tagging
* Adopt more unix-standard return values in utility programs
* mk5spec: work on complex data (Chris Phillips)
* VDIF format determination by data peeking added
* Version for DiFX-2.1, May 4, 2012

Version 1.4.2
* Post 2.0.0 tagging
* Start adding state counting for use in power detection.  2-bit sampling supported only at this time.
* Add m5tsys
* Can now make RedHat RPM
* Fix some memory leaks identified by valgrind.
* Introduce new_mark5_stream_absorb.  like new_mark5_stream, but it cleanly and immediately deallocates space for the temporary mark5_stream_generic and mark5_format_generic structures